<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    tools:context=".CreateRecipeActivity"
    tools:ignore="MissingConstraints"
    >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    app:cardBackgroundColor="@color/babypink"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp"
    >

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/recipeTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipeImage"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:text="@string/name_of_recipe"
            android:textColor="?android:textColorSecondary"
            android:textSize="25sp"
            android:textFontWeight="900"
            android:textAlignment="center"/>


    <TextView
        android:id="@+id/category"
        style="@style/ItemDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/recipeTitle"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:text="@string/category"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/ingredients_text"
        style="@style/ItemDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/category"
        android:padding="8dp"
        android:text="@string/ingredients"
        android:textSize="20sp"
        android:textFontWeight="600"
        />

        <TextView
        android:id="@+id/ingredients"
        style="@style/ItemDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredients_text"
        android:padding="8dp"
        android:text="@string/ingredient_list" />

    <TextView
        android:id="@+id/preparation_text"
        style="@style/ItemDetailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ingredients"
        android:padding="8dp"
        android:text="@string/preparation"
        android:textSize="20sp"
        android:textFontWeight="600"/>

        <TextView
            android:id="@+id/preparation"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/preparation_text"
            android:padding="8dp"
            android:text="@string/preparation_list" />

        <TextView
            android:id="@+id/time"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/preparation"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/time"/>


    <Button
        android:id="@+id/save_recipe"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/save_recipe" />

        <Button
            android:id="@+id/back"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/save_recipe"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:onClick="back"
            android:text="@string/back"
            tools:ignore="OnClick"
        />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
</ScrollView>