<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="15dp"
    app:cardBackgroundColor="@color/babypink"
    app:cardCornerRadius="25dp"
    app:cardElevation="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/recipeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/recipeTitle"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_below="@id/recipeImage"
            android:layout_centerHorizontal="true"
            android:padding="15dp"
            android:text="@string/name_of_recipe"
            android:textColor="?android:textColorSecondary"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/category"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipeTitle"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/category"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/time"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:text="@string/time"/>


        <Button
            android:id="@+id/more"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/more"
            android:layout_below="@id/time"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/unsave"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/delete_saving"
            android:layout_below="@id/more"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            />

    </RelativeLayout>
</androidx.cardview.widget.CardView>